--- a/practice/templates/practice/tasks/accordance.html
+++ b/practice/templates/practice/tasks/accordance.html
@@ -97,6 +97,7 @@
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
+<script src="{% static 'js/practice/getData.js' %}"></script>
 <script>
   $('#accordance').addClass('active');
 </script>
