--- a/practice/templates/practice/tasks/expression_belongs.html
+++ b/practice/templates/practice/tasks/expression_belongs.html
@@ -52,6 +52,7 @@
 <script src="{% static 'js/practice/expression_belongs.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
+<script src="{% static 'js/practice/getData.js' %}"></script>
 <script>
   $('#expression_belongs').addClass('active');
 </script>
