--- a/practice/templates/practice/tasks/chain_acceptance.html
+++ b/practice/templates/practice/tasks/chain_acceptance.html
@@ -56,6 +56,7 @@
 <script src="{% static 'js/practice/chain_acceptance.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
+<script src="{% static 'js/practice/getData.js' %}"></script>
 <script>
   $('#chain_acceptance').addClass('active');
 </script>
