--- a/practice/templates/practice/tasks/simplify_regex.html
+++ b/practice/templates/practice/tasks/simplify_regex.html
@@ -67,6 +67,7 @@
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
+<script src="{% static 'js/practice/getData.js' %}"></script>
 <script>
   $('#simplify_regex').addClass('active');
 </script>
