--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -57,6 +57,7 @@
 <script src="{% static 'js/practice/taskDFAtoregex.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
+<script src="{% static 'js/practice/getData.js' %}"></script>
 <script>
   $('#task_DFA_to_regex').addClass('active');
 </script>
